# emotion-recognition-robot

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md  package.xml  requirements.txt
launch/: emotion_based_movement.launch
scripts/: TTS_script.py  colors.txt  filtered_stories.json  move_forward.py  movement_script.py  stories.ipynb  stories_data.json  story_script.py  storytelling_script.py  teaching.ipynb  teaching_script.py  vision_script.py
scripts/stories/: filtered_stories.json  stories_data.json
