<package format="2">
  <name>emotion_based_turtlebot</name>
  <version>0.0.1</version>
  <description>Emotion-based movement for TurtleBot3 in Gazebo</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>turtlebot3_gazebo</depend>

  <export></export>
</package>
